fix(FP-1670): button text overflow (workspaces) (#641)

--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/tools/mixins.scss';
+
 .root {
   display: block;
   margin-bottom: 1em;
@@ -76,6 +78,8 @@
 }
 
 .ownership-button {
+  @include truncate-with-ellipsis;
+
   height: 18.88px;
   border-radius: 0;
   background-color: #f4f4f4;
